[#84] fixes, wording